All New Changes

--- a/com.ven.framework_auto/.project
+++ b/com.ven.framework_auto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ven.framework_auto</name>
+	<name>VenAutomationFramework</name>
 	<comment></comment>
 	<projects>
 	</projects>
